<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Note to Self</string>
    <string name="action_settings">Settings</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="idea_text">Idea</string>
    <string name="important_text">Important</string>
    <string name="todo_text">To do</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
</resources>
